[gd_scene load_steps=4 format=3 uid="uid://dx622dacf1rbp"]

[ext_resource type="Script" path="res://beam.gd" id="1_pwg1t"]
[ext_resource type="Texture2D" uid="uid://dlh123pkj67g5" path="res://images/beam.png" id="2_ol0rk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fb3ru"]
size = Vector2(0, 0)

[node name="beam" type="Area2D"]
script = ExtResource("1_pwg1t")

[node name="Line2D" type="Line2D" parent="."]
texture_repeat = 2
points = PackedVector2Array(0, 0, 26, 0)
width = 0.0
texture = ExtResource("2_ol0rk")
texture_mode = 1

[node name="WarningLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 100, 0)
width = 3.36
default_color = Color(0.941176, 0, 0, 0)

[node name="Timers" type="Node" parent="."]

[node name="DelayTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ChargeTimeTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DurationTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fb3ru")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timers/DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="timeout" from="Timers/ChargeTimeTimer" to="." method="_on_charge_time_timer_timeout"]
[connection signal="timeout" from="Timers/DurationTimer" to="." method="_on_duration_timer_timeout"]
